rust/src/methods/reshape/snapshots/reshape_yaml_articles@reshape-3.yaml.snap
---
source: rust/src/methods/reshape.rs
expression: article
input_file: fixtures/articles/reshape-3.yaml

---
{
  "type": "Article",
  "authors": [
    {
      "type": "Person",
      "familyNames": [
        "Smith"
      ],
      "givenNames": [
        "John"
      ]
    }
  ],
  "content": [],
  "dateModified": {
    "type": "Date",
    "value": "2021-07-02T00:00:00+00:00"
  },
  "keywords": [
    "foo"
  ],
  "title": [
    "The title"
  ]
}
